@@ -49,4 +49,5 @@
 - Added drpass (X:line) to the config code
 - Some more config2 code
 - Removed parser builtin directive include, and replaced it with our own
+- The config2 now uses strerror() to display an error, rather than the numeric
 - Fixed s_user.c so umode N and T cannot coexist
